Add test for LocationService - more tests and some fixes :-)